# ai-email-agent

./: .env-check-root  .env.example  .gitignore  .vercelignore  CLAUDE.md  FILE_DOCUMENTATION.md  README.md  create_gmail_credentials_table.py  debug-auth.js  idea.md  package-lock.json  package.json  pyproject.toml  requirements.txt  run.sh  setup_gmail_table.sql  start.sh  vercel.json
api/: index.py
backend/database/: full_schema_768.sql  migration_vector_768.sql  schema.sql
backend/scripts/: fix_rls_policies.sql  ingest_csv.py  migrate_embeddings.py
data/: vizaura_courses_dataset.csv
database/migrations/: 001_create_user_credentials.sql  002_create_gmail_credentials.sql
frontend/: .env-check  .env.local  next.config.js  package-lock.json  package.json
frontend/.next/: app-build-manifest.json  trace
frontend/.next/cache/: .tsbuildinfo
frontend/.next/cache/webpack/client-development/: index.pack.gz.old
frontend/.next/cache/webpack/client-production/: index.pack
frontend/.next/server/: app-paths-manifest.json  server-reference-manifest.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/inbox/: page.tsx
frontend/src/app/reply/: page.tsx
frontend/src/types/: gis.d.ts  index.ts
frontend/src/utils/: supabase.ts
scratch/: test_oauth.py  test_oauth_v2.py
scripts/: test_reply.py
src/: __init__.py
src/api/: config.py  main.py
src/api/routers/: auth.py  drafts.py  emails.py  feedback.py  health.py  knowledge.py
src/api/static/: index.html
src/db/: supabase.py
src/email/: gmail.py
src/rag/: service.py
(+6 files in other folders)
