[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-email-agent"
version = "0.1.0"
description = "AI Email Agent with RAG for intelligent replies"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "supabase>=2.9.0",
    "openai>=1.55.0",
    "google-generativeai>=0.3.0",
    "groq>=0.5.0",
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.154.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.0",
    "httpx>=0.27.0",
    "pandas>=2.2.0",
    "numpy>=2.1.0",
    "email-validator>=2.0.0",
    "python-multipart>=0.0.6",
    "psutil>=5.9.0",
    "npm>=0.1.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
ai-email-agent = "src.api.main:main"

[tool.uv]
package = true
